Add latex, asymptote support. Update docs.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,30 +13,50 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-      <script>
-    MathJax = {
+    <!-- LATEX RENDERING -->
+    <style>
+    .asymptote {
+        position:relative;
+        width: 95%;
+        height: 500px;
+        display:block;
+        margin-right: auto;
+        margin-left: auto;
+        margin-bottom: 30px;
+        right: 5px;
+        border: none;
+    }
+    </style>
+    <script>
+    window.MathJax = {
       tex: {
-        inlineMath: [['$','$'], ['\\(','\\)']],
-        displayMath: [['$$','$$'], ['\[','\]']]
-      },
-      options: {
-        renderActions: {
-          find: [10, function (doc) {
-            for (const node of document.querySelectorAll('script[type^="math/tex"]')) {
-              const display = !!node.type.match(/; *mode=display/);
-              const math = new doc.options.MathItem(node.textContent, doc.inputJax[0], display);
-              const text = document.createTextNode('');
-              node.parentNode.replaceChild(text, node);
-              math.start = {node: text, delim: '', n: 0};
-              math.end = {node: text, delim: '', n: 0};
-              doc.math.push(math);
-            }
-          }, '']
-        }
+        inlineMath: [['\\(', '\\)']],
+        displayMath: [['\\[','\\]']], // gh-pages' annoying kramdown configuration catches $$
+        processEscapes: false,
+        processEnvironments: true,
+        processRefs: true,
       }
     };
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js" id="MathJax-script"></script>
+    <script type="text/javascript">
+    document.addEventListener('DOMContentLoaded', function(){
+      function stripcdata(x) {
+        if (x.startsWith('% <![CDATA[') && x.endsWith('%]]>'))
+          return x.substring(11,x.length-4);
+        return x;
+      }
+      document.querySelectorAll("script[type='math/tex']").forEach(function(el){
+        el.outerHTML = "\\[" + stripcdata(el.textContent) + "\\]";
+      });
+      document.querySelectorAll("script[type='math/tex; mode=display']").forEach(function(el){
+        el.outerHTML = "\\[" + stripcdata(el.textContent) + "\\]";
+      });
+      var script = document.createElement('script');
+      script.src = "https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js";
+      document.head.appendChild(script);
+    }, false);
+    </script>
+    <!-- END LATEX RENDERING -->
   </head>
   <body>
     <div class="wrapper">
@@ -45,13 +65,12 @@
         {% if site.description or site.github.project_tagline %}
           <p>{{ site.description | default: site.github.project_tagline }}</p>
         {% endif %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
-        <ul>
-        {% if site.show_downloads %}
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
+        <ul style="width:40%">
+        {% if site.show_tow_downloads %}
+          <li style="width:33%"><a href="about:blank">Download <strong>Latest STOW</strong></a></li>
+          <li style="width:33%"><a href="about:blank">Download <strong>Latest JTOW</strong></a></li>
         {% endif %}
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+          <li style="width:32%"><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
