--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,10 +80,7 @@
       </section>
     </div>
     <footer>
-    {% if site.github.is_project_page %}
-      <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-    {% endif %}
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    <p>Website maintained by Tian Chen, Zed Li, and Cristian Bicheru.</a></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
 
