--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,16 +61,20 @@
   <body>
     <div class="wrapper">
       <header {% unless site.description or site.github.project_tagline %} class="without-description" {% endunless %}>
-        <h1>{{ site.title | default: site.github.repository_name }}</h1>
-        {% if site.description or site.github.project_tagline %}
-          <p>{{ site.description | default: site.github.project_tagline }}</p>
-        {% endif %}
+        <div style="width:30%; overflow:hidden">
+          <a href="/">
+            <h1>{{ site.title | default: site.github.repository_name }}</h1>
+            {% if site.description or site.github.project_tagline %}
+              <p>{{ site.description | default: site.github.project_tagline }}</p>
+            {% endif %}
+          </a>
+        </div>
         <ul style="width:40%">
         {% if site.show_tow_downloads %}
-          <li style="width:33%"><a href="about:blank">Download <strong>Latest STOW</strong></a></li>
-          <li style="width:33%"><a href="about:blank">Download <strong>Latest JTOW</strong></a></li>
+          <li style="width:33%"><a href="/assets/pdfs/J_STOW_6.pdf">Download <strong>Latest STOW</strong></a></li>
+          <li style="width:33%"><a href="/assets/pdfs/J_STOW_6.pdf">Download <strong>Latest JTOW</strong></a></li>
         {% endif %}
-          <li style="width:32%"><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+          <li style="width:32%"><a href="/honor-roll">View <strong>Honor Roll</strong></a></li>
         </ul>
       </header>
       <section>
@@ -80,7 +84,7 @@
       </section>
     </div>
     <footer>
-    <p>Website maintained by Tian Chen, Zed Li, and Cristian Bicheru.</a></p>
+    <p>Website maintained by the SJAM Mathletes Exec Team.</a></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
 
