--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,8 +71,8 @@
         </div>
         <ul style="width:40%">
         {% if site.show_tow_downloads %}
-          <li style="width:33%"><a href="/assets/pdfs/J_STOW_6.pdf">Download <strong>Latest STOW</strong></a></li>
-          <li style="width:33%"><a href="/assets/pdfs/J_STOW_6.pdf">Download <strong>Latest JTOW</strong></a></li>
+          <li style="width:33%"><a href="/assets/pdfs/2019-2020/Week 6/J_STOW_6.pdf">Download <strong>Latest STOW</strong></a></li>
+          <li style="width:33%"><a href="/assets/pdfs/2019-2020/Week 6/J_STOW_6.pdf">Download <strong>Latest JTOW</strong></a></li>
         {% endif %}
           <li style="width:32%"><a href="/honor-roll">View <strong>Honor Roll</strong></a></li>
         </ul>
