--- a/_sass/jekyll-theme-modernist.scss
+++ b/_sass/jekyll-theme-modernist.scss
@@ -1,5 +1,5 @@
 @import "rouge-base16-dark";
-@import url('https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu:300italic,700italic,300,700');
 
 html {
   background:#6C7989;
@@ -10,8 +10,8 @@ html {
 body {
   padding:50px 0;
   margin:0;
-  font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#555;
+  font:14px/1.5 Ubuntu, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color:#000000;
   font-weight:300;
   background:url('../images/checker.png') fixed;
   min-height: calc(100% - 100px);
