--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,8 +71,8 @@
         </div>
         <ul style="width:40%">
         {% if site.show_tow_downloads %}
-          <li style="width:33%"><a href="assets/pdfs/2020-2021/Week 1/Oct 2 Problem Set.pdf">Download <strong>Problem Set</strong></a></li>
-            <li style="width:33%"><a onclick="return false" title="Not Yet Released.">Download <strike><strong>Answer Key</strong></strike></a></li>
+          <li style="width:33%"><a href="assets/pdfs/2020-2021/Week 2/Oct 9 Problem Set.pdf">Download <strong>Problem Set</strong></a></li>
+            <li style="width:33%"><a href="assets/pdfs/2020-2021/Week 1/Oct 2 Answer Key and Solutions.pdf">Download <strong>Answer Key</strong></a></li>
         {% endif %}
           <li style="width:32%"><a href="/honor-roll">View <strong>Honor Roll</strong></a></li>
         </ul>
