add sjammo link to header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,12 +69,15 @@
             {% endif %}
           </a>
         </div>
-        <ul style="width:40%">
+        <ul style="width:30%">
         {% if site.show_tow_downloads %}
+          <!--
           <li style="width:33%"><a href="assets/pdfs/2020-2021/Week 10/Dec 4 Problem Set.pdf">Download <strong>Problem Set</strong></a></li>
-            <li style="width:33%"><a href="assets/pdfs/2020-2021/Week 10/Dec 4 Answer Key and Solutions.pdf">Download <strong>Answer Key</strong></a></li>
+          <li style="width:33%"><a href="assets/pdfs/2020-2021/Week 10/Dec 4 Answer Key and Solutions.pdf">Download <strong>Answer Key</strong></a></li>
+          -->
+          <li style="width:49%"><a href="/sjammo">View <strong>SJAMMO Info</strong></a></li>
         {% endif %}
-          <li style="width:32%"><a href="/honor-roll">View <strong>Honor Roll</strong></a></li>
+          <li style="width:49%"><a href="/honor-roll">View <strong>Honor Roll</strong></a></li>
         </ul>
       </header>
       <section>
